@@ -1,6 +1,6 @@
 <?xml version="1.0"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <!--
-     Copyright (C) 2011, 2012, 2013, 2015, 2017, 2018 XStream committers.
+     Copyright (C) 2011, 2012, 2013, 2015, 2017, 2018, 2019, 2020, 2022 XStream committers.
      All rights reserved.
      
      The software in this package is published under the terms of the BSD
@@ -24,18 +24,18 @@
 
   <profiles>
     <profile>
-      <id>jdk9-ge</id>
+      <id>jdk17-ge</id>
       <activation>
-        <jdk>[9,)</jdk>
+        <jdk>[17,)</jdk>
       </activation>
       <properties>
-        <surefire.argline>--illegal-access=${surefire.illegal.access}</surefire.argline>
+        <surefire.argline>--add-opens java.base/java.lang=ALL-UNNAMED</surefire.argline>
       </properties>
     </profile>
     <profile>
-      <id>jdk18</id>
+      <id>jdk16</id>
       <activation>
-        <jdk>1.8</jdk>
+        <jdk>16</jdk>
       </activation>
       <build>
         <plugins>
@@ -45,6 +45,15 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+    <profile>
+      <id>jdk9-ge-jdk16</id>
+      <activation>
+        <jdk>[9,17)</jdk>
+      </activation>
+      <properties>
+        <surefire.argline>--illegal-access=${surefire.illegal.access}</surefire.argline>
+      </properties>
     </profile>
   </profiles>
 
@@ -97,12 +106,12 @@
     <dependency>
       <groupId>com.thoughtworks.xstream</groupId>
       <artifactId>xstream</artifactId>
-      <classifier>tests</classifier>
-      <type>test-jar</type>
     </dependency>
     <dependency>
       <groupId>com.thoughtworks.xstream</groupId>
       <artifactId>xstream</artifactId>
+      <classifier>tests</classifier>
+      <type>test-jar</type>
     </dependency>
     <dependency>
         <groupId>org.hibernate</groupId>
@@ -141,5 +150,6 @@
 
   <properties>
     <bundle.export.package>!com.thoughtworks.xstream.hibernate.util,com.thoughtworks.xstream.hibernate.*;-noimport:=true</bundle.export.package>
+    <jar.module.name>xstream.hibernate</jar.module.name>
   </properties>
 </project>
