@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <!--
      Copyright (C) 2006 Joe Walnes.
-     Copyright (C) 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2017, 2018 XStream committers.
+     Copyright (C) 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2017, 2018, 2019, 2020, 2021, 2022 XStream committers.
      All rights reserved.
      
      The software in this package is published under the terms of the BSD
@@ -45,14 +45,14 @@
     </dependency>
 
     <dependency>
-      <groupId>stax</groupId>
-      <artifactId>stax</artifactId>
+      <groupId>com.fasterxml.woodstox</groupId>
+      <artifactId>woodstox-core</artifactId>
       <optional>true</optional>
     </dependency>
 
     <dependency>
-      <groupId>com.fasterxml.woodstox</groupId>
-      <artifactId>woodstox-core</artifactId>
+      <groupId>stax</groupId>
+      <artifactId>stax</artifactId>
       <optional>true</optional>
     </dependency>
 
@@ -63,8 +63,8 @@
     </dependency>
 
     <dependency>
-      <groupId>xmlpull</groupId>
-      <artifactId>xmlpull</artifactId>
+      <groupId>io.github.x-stream</groupId>
+      <artifactId>mxparser</artifactId>
     </dependency>
 
     <dependency>
@@ -84,6 +84,7 @@
     <dependency>
       <groupId>xpp3</groupId>
       <artifactId>xpp3_min</artifactId>
+      <optional>true</optional>
     </dependency>
 
     <dependency>
@@ -99,13 +100,13 @@
     </dependency>
 
     <dependency>
-      <groupId>javax.activation</groupId>
-      <artifactId>javax.activation-api</artifactId>
+      <groupId>jakarta.activation</groupId>
+      <artifactId>jakarta.activation-api</artifactId>
       <optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>javax.xml.bind</groupId>
-      <artifactId>jaxb-api</artifactId>
+      <groupId>jakarta.xml.bind</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
       <scope>provided</scope><!-- only required for compilation with Java 11 or higher, but only used by Java 7 or below -->
     </dependency>
 
@@ -136,6 +137,54 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.sun.xml.ws</groupId>
+      <artifactId>jaxws-rt</artifactId>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>javax.xml.ws</groupId>
+          <artifactId>jaxws-api</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>com.sun.istack</groupId>
+          <artifactId>istack-commons-runtime</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>com.sun.xml.bind</groupId>
+          <artifactId>jaxb-impl</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>com.sun.xml.messaging.saaj</groupId>
+          <artifactId>saaj-impl</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>com.sun.xml.stream.buffer</groupId>
+          <artifactId>streambuffer</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>com.sun.xml.ws</groupId>
+          <artifactId>policy</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>com.sun.org.apache.xml.internal</groupId>
+          <artifactId>resolver</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.glassfish.gmbal</groupId>
+          <artifactId>gmbal-api-only</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.jvnet</groupId>
+          <artifactId>mimepull</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.jvnet.staxex</groupId>
+          <artifactId>stax-ex</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 
@@ -186,11 +235,13 @@
             <configuration>
               <includes>
                 <include>**/AbstractAcceptanceTest.*</include>
+                <include>META-INF/LICENSE</include>
               </includes>
               <archive combine.children="append">
                 <manifestEntries>
                   <Specification-Title>${project.name} Test</Specification-Title>
                   <Implementation-Title>${project.name} Test</Implementation-Title>
+                  <Bundle-License>BSD-3-Clause</Bundle-License>
                 </manifestEntries>
               </archive>
             </configuration>
@@ -201,6 +252,118 @@
   </build>
 
   <profiles>
+    <profile>
+      <id>jdk17-ge</id>
+      <activation>
+        <jdk>[17,)</jdk>
+      </activation>
+      <properties>
+        <surefire.argline>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.time=ALL-UNNAMED --add-opens java.base/java.time.chrono=ALL-UNNAMED --add-opens java.base/java.lang.invoke=ALL-UNNAMED --add-opens java.base/java.lang.ref=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.text=ALL-UNNAMED --add-opens java.base/javax.security.auth.x500=ALL-UNNAMED --add-opens java.base/sun.util.calendar=ALL-UNNAMED --add-opens java.desktop/java.beans=ALL-UNNAMED --add-opens java.desktop/java.awt=ALL-UNNAMED --add-opens java.desktop/java.awt.font=ALL-UNNAMED --add-opens java.desktop/javax.swing=ALL-UNNAMED --add-opens java.desktop/javax.swing.border=ALL-UNNAMED --add-opens java.desktop/javax.swing.event=ALL-UNNAMED --add-opens java.desktop/javax.swing.table=ALL-UNNAMED --add-opens java.desktop/javax.swing.plaf.basic=ALL-UNNAMED --add-opens java.desktop/javax.swing.plaf.metal=ALL-UNNAMED --add-opens java.desktop/javax.imageio=ALL-UNNAMED --add-opens java.desktop/javax.imageio.spi=ALL-UNNAMED --add-opens java.desktop/sun.swing=ALL-UNNAMED --add-opens java.desktop/sun.swing.table=ALL-UNNAMED --add-opens java.xml/javax.xml.datatype=ALL-UNNAMED --add-opens java.xml/com.sun.xml.internal.stream=ALL-UNNAMED --add-opens java.xml/com.sun.org.apache.xerces.internal.parsers=ALL-UNNAMED --add-opens java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED</surefire.argline>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk16</id>
+      <activation>
+        <jdk>16</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <configuration>
+              <additionalJOptions>
+                <additionalJOption>--add-modules=jdk.unsupported</additionalJOption>
+              </additionalJOptions>
+              <excludePackageNames>com.thoughtworks.xstream.core.util</excludePackageNames>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>jdk16-ge</id>
+      <activation>
+        <jdk>[16,)</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+              <testExcludes>
+                <exclude>**/Record**</exclude>
+              </testExcludes>
+            </configuration>
+            <executions>
+              <execution>
+                <id>compile-jdk16</id>
+                <configuration>
+                  <release>16</release>
+                  <testExcludes combine.self="override" />
+                  <testIncludes>
+                    <include>**/Record**</include>
+                  </testIncludes>
+                </configuration>
+                <goals>
+                  <goal>testCompile</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>jdk15</id>
+      <activation>
+        <jdk>15</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+              <testExcludes>
+                <exclude>**/Record**</exclude>
+              </testExcludes>
+            </configuration>
+            <executions>
+              <execution>
+                <id>compile-jdk15</id>
+                <configuration>
+                  <release>15</release>
+                  <testExcludes combine.self="override" />
+                  <testIncludes>
+                    <include>**/Record**</include>
+                  </testIncludes>
+                  <compilerArgs>
+                    <arg>--enable-preview</arg>
+                  </compilerArgs>
+                </configuration>
+                <goals>
+                  <goal>testCompile</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+      <properties>
+        <surefire.preview.arg>--enable-preview</surefire.preview.arg>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk11-ge-jdk16</id>
+      <activation>
+        <jdk>[11,17)</jdk>
+      </activation>
+      <properties>
+        <surefire.argline>--illegal-access=${surefire.illegal.access}</surefire.argline>
+      </properties>
+    </profile>
     <profile>
       <id>jdk11-ge</id>
       <activation>
@@ -213,17 +376,33 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <dependencies>
               <dependency>
-                <groupId>javax.xml.bind</groupId>
-                <artifactId>jaxb-api</artifactId>
-                <version>${version.javax.xml.bind.api}</version>
+                <groupId>jakarta.xml.bind</groupId>
+                <artifactId>jakarta.xml.bind-api</artifactId>
+                <version>${version.jakarta.xml.bind.api}</version>
               </dependency>
             </dependencies>
           </plugin>
         </plugins>
       </build>
-      <properties>
-        <surefire.argline>--illegal-access=${surefire.illegal.access}</surefire.argline>
-      </properties>
+    </profile>
+    <profile>
+      <id>jdk9-ge-jdk14</id>
+      <activation>
+        <jdk>[9,15)</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+              <testExcludes>
+                <exclude>**/Record**</exclude>
+              </testExcludes>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
     <profile>
       <id>jdk9-ge-jdk10</id>
@@ -235,7 +414,7 @@
       </properties>
     </profile>
     <profile>
-      <id>jdk18-ge</id>
+      <id>jdk8-ge</id>
       <activation>
         <jdk>[1.8,)</jdk>
       </activation>
@@ -248,37 +427,13 @@
               <compilerArgs>
                 <arg>-XDignore.symbol.file</arg>
               </compilerArgs>
-              <excludes>
-                <exclude>**/Lambda**</exclude>
-                <exclude>**/time/**</exclude>
-                <exclude>**/ISO8601JavaTimeConverter.java</exclude>
-              </excludes>
-              <testExcludes>
-                <exclude>**/Lambda**</exclude>
-                <exclude>**/*18TypesTest.java</exclude>
-              </testExcludes>
             </configuration>
-            <executions>
-              <execution>
-                <id>compile-jdk18</id>
-                <configuration>
-                  <source>1.8</source>
-                  <target>1.8</target>
-                  <excludes combine.self="override"/>
-                  <textExcludes combine.self="override"/>
-                </configuration>
-                <goals>
-                  <goal>compile</goal>
-                  <goal>testCompile</goal>
-                </goals>
-              </execution>
-            </executions>
           </plugin>
         </plugins>
       </build>
     </profile>
     <profile>
-      <id>jdk18</id>
+      <id>jdk8</id>
       <activation>
         <jdk>1.8</jdk>
       </activation>
@@ -286,47 +441,12 @@
         <plugins>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-javadoc-plugin</artifactId>
-            <configuration>
-              <excludePackageNames>com.thoughtworks.xstream.core.util</excludePackageNames>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <id>jdk17</id>
-      <activation>
-        <jdk>1.7</jdk>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <configuration>
-              <compilerArgs>
-                <arg>-XDignore.symbol.file</arg>
-              </compilerArgs>
-              <excludes>
-                <exclude>**/Lambda**</exclude>
-                <exclude>**/time/**</exclude>
-                <exclude>**/ISO8601JavaTimeConverter.java</exclude>
-                <exclude>**/Base64JavaUtilCodec.java</exclude>
-              </excludes>
               <testExcludes>
-                <exclude>**/Lambda**</exclude>
-                <exclude>**/Base64JavaUtilCodecTest.java</exclude>
-                <exclude>**/*18TypesTest.java</exclude>
+                <exclude>**/*09Test.java</exclude>
+                <exclude>**/Record**</exclude>
               </testExcludes>
-            </configuration>
-          </plugin>
-          <plugin><!-- required for Maven Central -->
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-javadoc-plugin</artifactId>
-            <configuration>
-              <source>1.7</source>
-              <excludePackageNames>com.thoughtworks.xstream.core.util</excludePackageNames>
             </configuration>
           </plugin>
         </plugins>
@@ -358,7 +478,17 @@
 
   <properties>
     <bundle.export.package>!com.thoughtworks.xstream.core.util,com.thoughtworks.xstream.*;-noimport:=true</bundle.export.package>
-    <bundle.import.package>org.xmlpull.mxp1;resolution:=optional,org.xmlpull.v1;resolution:=optional,*</bundle.import.package>
+    <bundle.import.package>
+        org.xmlpull.mxp1;resolution:=optional,
+        org.xmlpull.v1;resolution:=optional,
+        io.github.xstream.mxparser.*;resolution:=optional,
+        com.ibm.*;resolution:=optional,
+        com.sun.*;resolution:=optional,
+        javax.*;resolution:=optional,
+        org.xml.*;resolution:=optional,
+        sun.*;resolution:=optional,
+        *
+    </bundle.import.package>
   </properties>
 
 </project>
